--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "classnames": "^2.3.1",
+    "leaflet": "^1.8.0",
     "react": "^18.1.0",
     "react-chartjs-2": "^4.2.0",
     "react-countup": "^6.3.0",
     "react-dom": "^18.1.0",
+    "react-leaflet": "^4.0.1",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
