--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-chartjs-2": "^4.2.0",
     "react-countup": "^6.3.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-leaflet": "^4.0.1",
     "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
